--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/image": "^1.9.0",
     "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/leaflet": "^1.2.6",
+    "@sentry/nuxt": "^9.12.0",
     "add": "^2.0.6",
     "aos": "^2.3.4",
     "module": "^1.2.5",
